# libexecstream

./: .gitignore  CMakeLists.txt
include/execstream/: execstream.h
include/libexecstream/: exec-stream.h
src/: CMakeLists.txt  exec-stream-common.h  exec-stream.cpp  execstream.cpp
src/posix/: exec-stream-helpers.cpp  exec-stream-helpers.h  exec-stream-impl.cpp  exec-stream-impl.h  execstream_helpers.cpp
src/win/: exec-stream-helpers.cpp  exec-stream-helpers.h  exec-stream-impl.cpp  exec-stream-impl.h  execstream_helpers.cpp  execstream_impl.cpp
test/: CMakeLists.txt  Makefile.gcc  exec-stream-test.cpp  execstream_test.cpp
